# stable-diffusion-webui

./: Dockerfile  pyproject.toml
