[tool.ruff]

target-version = "py39"

[tool.ruff.lint]

extend-select = [
  "B",
  "C",
  "I",
  "W",
]

exclude = [
	"extensions",
	"extensions-disabled",
]

ignore = [
	"E501", # Line too long
	"E721", # Do not compare types, use `isinstance`
	"E731", # Do not assign a `lambda` expression, use a `def`
	
	"I001", # Import block is un-sorted or un-formatted
	"C901", # Function is too complex
	"C408", # Rewrite as a literal
	"W605", # invalid escape sequence, messes with some docstrings
]

[tool.ruff.lint.per-file-ignores]
"webui.py" = ["E402"]  # Module level import not at top of file

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = ["fastapi.Depends", "fastapi.security.HTTPBasic"]

[tool.pytest.ini_options]
base_url = "http://127.0.0.1:7860"

[tool.poetry]
name = "stable-diffusion-webui"
version = "0.1.0"
description = ""
authors = ["None"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gitpython = "^3.1.43"
pillow = "^10.4.0"
accelerate = "^0.33.0"
blendmodes = "^2024.1.1"
clean-fid = "^0.1.35"
diskcache = "^5.6.3"
einops = "^0.8.0"
facexlib = "^0.3.0"
fastapi = ">=0.90.1"
gradio = "3.41.2"
inflection = "^0.5.1"
jsonmerge = "^1.9.2"
kornia = "^0.7.3"
lark = "^1.2.2"
numpy = "1.26.4"
omegaconf = "^2.3.0"
open-clip-torch = "^2.26.1"
piexif = "^1.1.3"
protobuf = "3.20.0"
psutil = "^6.0.0"
pytorch-lightning = "1.6.5"
requests = "^2.32.3"
resize-right = "^0.0.2"
safetensors = "^0.4.4"
scikit-image = ">=0.19"
tomesd = "^0.1.3"
torch = "2.3.1"
torchdiffeq = "^0.2.4"
torchsde = "^0.2.6"
transformers = "4.30.2"
pillow-avif-plugin = "1.4.3"
torchvision = {version = "^0.18.1+rocm5.7", source = "pytorch-gpu-rocm"}
torchaudio = {version = "^2.3.1+rocm5.7", source = "pytorch-gpu-rocm"}



[[tool.poetry.source]]
name = "pytorch-gpu-rocm"
url = "https://download.pytorch.org/whl/rocm5.7"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
